feat: ocr processor pdf to image
